# gnome-dictionary

./: Makefile.am  autogen.sh  configure.ac  gnome-dictionary.doap
docs/reference/gdict/: Makefile.am
libgdict/: Makefile.am
po/: POTFILES.in  POTFILES.skip
src/: Makefile.am
